<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bigtwo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.a1_l3_quizapp.QuizApp">

    <LinearLayout
        android:id="@+id/bigone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            style="@style/cardViewCustom"
            card_view:cardCornerRadius="6dp">

            <LinearLayout
                android:id="@+id/placeholder2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question1"
                    style="@style/question_text"
                    android:text="@string/q1" />

                <RadioGroup
                    android:tag="tag1"
                    android:id="@+id/rg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"></RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            style="@style/cardViewCustom"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:id="@+id/placeholder1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question2"
                    style="@style/question_text"
                    android:text="@string/q2" />

                <RadioGroup
                    android:tag="tag2"
                    android:id="@+id/rg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"></RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view3"
            style="@style/cardViewCustom"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:id="@+id/placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question3"
                    style="@style/question_text"
                    android:text="@string/q3" />

                <LinearLayout
                    android:id="@+id/cbGroup3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view4"
            style="@style/cardViewCustom"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:id="@+id/placeholder3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question4"
                    style="@style/question_text"
                    android:text="@string/q4" />

                <EditText
                    android:id="@+id/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/empty_string" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/placeholder4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/placeholder5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onSubmitClicked"
                android:text="@string/str_submit" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>